fix: [ALT-281] 채팅 미비점 보완 — 방 나가기 API·개인 큐 실시간 전파·WebSocket 보안 정리 (#101)
* fix: [ALT-281] WebSocket Spec 문구 정정

WebSocket Spec 어노테이션 문구가 실제 경로와 달라 Swagger를 보고 붙으면
반드시 실패했다. /ws → /api/ws-connect(SockJS 미지원), /app/chat/send →
/pub/app/send.{chatRoomId}로 정정하고 CONNECT 인증 헤더·Swagger 호출 불가
문구를 추가했다.

메시지 발신자 이름·프로필 추가는 dev 핫픽스(59fa7da1)로 먼저 반영돼
이 커밋에서는 제외했다.

* feat: [ALT-282] 채팅방 나가기 API 추가 및 FCM 발송 대상 정리

채팅방을 정리할 수단이 없어 1:1 방을 나갈 수 있게 했다. 업장 단톡방은
멤버십이 업장 소속에 종속돼 자동 동기화되므로 나가기를 막는다 — 허용해도
다음 동기화에 다시 들어와 사용자에겐 고장으로 보인다.

- POST /{app,manager}/chat/rooms/{chatRoomId}/leave 신설. left_at 소프트
  마킹이라 방과 대화는 남고, 이미 나간 방은 멱등 no-op
- 검사 순서는 방 조회 → 멤버십 → GROUP 거부. 멤버십을 먼저 봐야 비멤버가
  방의 존재나 종류를 구분할 수 없다
- createOrGetChatRoom이 기존 방을 찾으면 호출자 본인 멤버십만 rejoin해
  기존 방·대화 내역 그대로 복귀. 상대방 멤버십은 건드리지 않는다

FCM 발송 경로의 DIRECT 분기는 멤버십이 아니라 participant 컬럼으로 상대를
찾아 나간 사람에게도 푸시가 갔다. 활성 멤버 기반인 그룹 경로가 DIRECT에도
그대로 맞으므로 분기를 없애고 단일 경로로 합쳤다.

* fix: [ALT-283] STOMP 구독 인가 추가 및 재진입 시 읽음 포인터 정리

WebSocket 설정이 인증만 하고 구독 목적지를 검사하지 않아, 인증만 통과하면
누구나 임의 roomId의 /sub/chat.{roomId}를 구독해 남의 채팅방 메시지를
실시간으로 받을 수 있었다.

- ChatSubscribeAuthorizationChannelInterceptor 신설. /sub/chat.{roomId}
  구독을 그 방의 활성 멤버로 제한한다
- 거부는 예외가 아니라 프레임 드롭이다. 예외를 던지면 Spring이 세션을
  PROTOCOL_ERROR로 끊어 그 세션의 정상 구독까지 죽고, 클라이언트가 구독을
  재등록하며 재연결 루프에 빠진다. 방 단위 인가 실패는 국소적이므로
  세션은 살린다
- 인터셉터 순서는 인증 → 인가 → presence, 구독 목적지 prefix는 발행측과
  ChatConstants로 공유한다. 한쪽만 바뀌면 인가가 조용히 fail-open 된다

재진입한 멤버의 읽음 포인터가 stale하게 남아, 상대 화면의 unreadCount가
"읽음 → 안읽음"으로 역행했다. rejoin 시 방 최신 메시지로 포인터를 당긴다.
1:1 경로와 그룹방 재가입 경로 양쪽 모두 적용했다. 나가 있던 구간 메시지는
조회에서 계속 보이며, 안 읽음으로만 잡히지 않는다.

* fix: [ALT-284] 멤버십 단절 시 WebSocket 세션 회수 및 채팅 정리

ALT-283의 구독 인가는 SUBSCRIBE 시점 1회뿐이라, 이미 구독 중인 세션은
멤버십이 끊긴 뒤에도 브로드캐스트를 계속 받았다. 업장에서 강제로 빠진
워커가 그룹방 메시지를 계속 보는 상태였다.

- 멤버십이 끊기면 그 유저의 WebSocket 세션을 닫는다. 세션 레지스트리는
  2단으로, sessionId->session은 핸드셰이크 데코레이터가, (scope,memberId)
  ->sessionIds는 SessionConnected/Disconnect 이벤트가 채운다. STOMP CONNECT
  에서 인증하므로 raw 세션의 principal로는 유저를 알 수 없다
- 다중 인스턴스는 Redis chat: